--- a/BibleBrailleComp/nbproject/project.properties
+++ b/BibleBrailleComp/nbproject/project.properties
@@ -5,17 +5,16 @@ com.sun.jbi.routing=true
 com.sun.jbi.routing.bc.autoconnect=true
 com.sun.jbi.sa.internal.routing=true
 dist.dir=dist
-dist.jar=${dist.dir}/PastebinTesterComp.zip
-j2ee.server.type=J2EE
-jbi.content.additional=${reference.PastebinTester.dist_se}
+dist.jar=${dist.dir}/BibleBrailleComp.zip
+jbi.content.additional=${reference.BibleBraille.dist_se}
 jbi.content.component=sun-bpel-engine
-jbi.service-assembly.description=Represents the Service Assembly of PastebinTesterComp
-jbi.service-assembly.id=PastebinTesterComp
+jbi.service-assembly.description=Represents the Service Assembly of BibleBrailleComp
+jbi.service-assembly.id=BibleBrailleComp
 jbi.service-unit.description=Represents this Service Unit
 meta.inf=${source.root}/conf
-project.PastebinTester=../PastebinTester
-reference.PastebinTester.dist_se=${project.PastebinTester}/build/SEDeployment.jar
-resource.PastebinTester=${project.PastebinTester}/setup
+project.BibleBraille=../BibleBraille
+reference.BibleBraille.dist_se=${project.BibleBraille}/build/SEDeployment.jar
+resource.BibleBraille=${project.BibleBraille}/setup
 source.encoding=UTF-8
 source.root=src
 src.build.dir=${source.root}/jbiServiceUnits
