fix the bible service

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ nbactions.xml
 /BibleBrailleComp/src/jbiServiceUnits/
 /BibleBrailleComp/test/results/
 /TEST/nbproject/private/
+/TESTComp/src/jbiServiceUnits/
+/TESTComp/test/results/
