add new BibleAudioService

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ nbactions.xml
 /TEST/nbproject/private/
 /TESTComp/src/jbiServiceUnits/
 /TESTComp/test/results/
+/BibleAudioProxyComp/src/jbiServiceUnits/
