fix WSDL name error

--- a/BibleBrailleComp/test/reply_fault/Concurrent.properties
+++ b/BibleBrailleComp/test/reply_fault/Concurrent.properties
@@ -3,7 +3,7 @@ calculatethroughput=false
 #comparisontype's possible values: identical|binary|equals
 comparisontype=identical
 concurrentthreads=1
-description=Test Case Test2
+description=Test Case reply_fault
 destination=http://localhost:${HttpDefaultPort}/BibleBrailleWSDLService/BibleBrailleWSDLPort
 #featurestatus's possible values: progress|done
 featurestatus=done
